0.1428
  - fixed bug that number related constraint match unicode number by \d.
    From now, only 0-9 is matched.
  - fixed bug that between constraint can't receive decimal number.
  
0.1427
  - fixed bug that missing parameter had not send to constraint function.
0.1426
  - improved undefined value validation
  - removed EXPERIMETAL status from Validator::Custom::Result::loose_data method
0.1425
  - added EXPERIMENTAL Validator::Custom::Result loose_data method
  - can set code reference to rule default option to get data at read time.
  - changed backword compatible policy
    ------------------------------------------------------------------------
    If a functionality is DEPRECATED, you can know it by DEPRECATED warnings
    except for attribute method.
    You can check all DEPRECATED functionalities by document.
    DEPRECATED functionality is removed after five years,
    but if at least one person use the functionality and tell me that thing
    I extend one year each time you tell me it.

    EXPERIMENTAL functionality will be changed without warnings.
    ------------------------------------------------------------------------
    
0.1424
  - added to_array filter
0.1422
  - added require option
0.1421
  - removed EXPERIMENTAL status from DBIx::Custom::Result to_hash()
  - removed EXPERIMENTAL status from js_fill_form_button, 
  - removed EXPERIMENTAL status from datetime_to_timepiece, date_to_timepiece
0.1420
  updated pod
0.1419
  fixed test
0.1418
  fixed test
0.1417
  fixed test
0.1416
  adeed experimental datetime_to_timepiece constraint
0.1415
  added experimental Validator::Custom::Result to_hash method
  added experimental date_to_timepiece constraint
0.1414
  fixed merge constraint bug
0.1413
  added any constraint
  fixed js_fill_form_button bug
0.1412
  fixed tests
0.1411
  added experimental js_fill_form_button method
0.1410
  fixed negativate constraint bug
  fixed "or" condition constraint function
0.1409
  added space constraint function